<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:gravity="top|center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:maxHeight="300sp"
            android:scaleType="fitCenter"
            android:paddingBottom="15pt"
            android:src="@drawable/add_photo_test" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user_Mes" />

        <EditText
            android:id="@+id/photoMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/imgUpload_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertDialogCancel" />

            <Button
                android:id="@+id/imgUpload_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photoPreview_okayAndUpload" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>